Perkin-UAT/force-app/main/default/objects/SCV_Telephone_Numbers__c/SCV_Telephone_Numbers__c.object-meta.xml
<CustomObject>
    <label>SCV Telephone Numbers</label>
    <nameField>
        <label>Telephone Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SCV Telephone Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>