Perkin-UAT/force-app/main/default/objects/SCV_Telephone_Numbers__c/fields/Assigned_to_user__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_user__c</fullName>
    <label>Assigned to [user]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>