Perkin-UAT/force-app/main/default/objects/SCV_Telephone_Numbers__c/fields/Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Status__c</fullName>
    <label>Assignment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>