Perkin-UAT/force-app/main/default/objects/SCV_Telephone_Numbers__c/fields/Available_Usages__c.field-meta.xml
<CustomField>
    <fullName>Available_Usages__c</fullName>
    <label>Available Usages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>