Perkin-UAT/force-app/main/default/objects/SCV_Telephone_Numbers__c/fields/Number_Type__c.field-meta.xml
<CustomField>
    <fullName>Number_Type__c</fullName>
    <label>Number Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>